@startuml
'https://plantuml.com/class-diagram


class Catégorie {

-nom : string not null
-dateCreation : datetime not null

}

class Utilisateur
{
-prenom : string not null
-nom : string not null
-pseudo : string null
-adresseMail : string not null
-motDePasse : string not null
-createdAt : date not null
-modifiedAt :  date null
-roles :  string not null
-Actif :  bool not null
}


class Ville {

-nom : string not null
-codePostal : string not null
-nomDepartement : string not null
-numDepartement : int not null
-nomRegion : string not null

}

class Etablissement {

-nom : string not null
-slug : string not null
-descript° : text not null
-numTel : string not null
-adresse : string not null
-ville : Ville not null
-email : string not null
-image : string null
-actif : bool not null
-accueil : bool not null
-dateCreation : datetime not null
-dateModification : datetime not null
-categorie : array not null

}





Etablissement "1..* " -- "1..* " Catégorie
Etablissement "1..1 "-- "0..*"Ville
Etablissement "0..*"  -- "0..*"Utilisateur
@enduml